CI/CD 파이프라인 및 메인 스크립트에서 출력 버퍼링 비활성화: flush=True 추가

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -60,6 +60,7 @@ jobs:
               --restart unless-stopped \
               -p 8000:8000 \
               --env-file /home/ubuntu/.env \
+              -e PYTHONUNBUFFERED=1 \
               public.ecr.aws/${{ secrets.ECR_REPOSITORY }}:latest
 
             # 오래된 이미지 정리
